Added timer music

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     
 <div class="wrapper">
     <audio id="alarm-tone" src="Music/Alarm.mp3" controls></audio>
+    <audio id="music_tone" src="Music/farm.mp3" controls></audio>
     <div class="display-flex-col-center" id="main-box">
         <h2>Multiple Timers App</h2>
 
